--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<div class="ver-key">
 						<div class="exec-key">
 							<input type='text' id='key-input' placeholder='🔐 enter the activation key here...'>
-							<p id='error-key' style='color: red; display: none;'>Invalid</p>
+							<p id='error-key' style='color: red; display: none;'>Invalid Key!</p>
 							<p id='succes-key' style='color: green; display: none;'>Activated</p>
 							<button id='submit-key' class='gC-btn'>Activate</button>
 						</div>					
