--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
 						<div class="online-user-mob">
 							<div class="online-mobileScreen">
 								<div style="display: flex; justify-content: right; width: 100%;">
-									<button style="width: 100%" id="show-online">show online</button>
-									<button style="display: none; width: 100%;" id="close-online">&times; Close</button>
+									<button style="display: none; width: 100%" id="show-online">show online</button>
+									<button style="width: 100%;" id="close-online">&times; hide online</button>
 								</div>
 								<div id="online-panel">
 									<span id="online-counter-mob">0</span>
@@ -388,9 +388,9 @@ window.addEventListener('load', function() {
 
   attemptToDisplayBody();
 });
+
+
 </script>
 <script type="module" src="js/citapp.js"></script>
 <script src="js/origin.js"></script>
 </html>
-
-
