--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<meta name="referrer" content="never">
 	<meta name="keywords" content="Gmail Checker, Bulk Gmail Checker, Email Verifier, Gmail Verifier, Mail Checker, Verify Gmail, Check Gmail, Gmail Validation, Email Validation">
 	<meta name="author" content="Gmooy">
-	<meta name="theme-color" content="#ff9900">
-	<meta name="msapplication-navbutton-color" content="#ff9900">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#ff9900">
+	<meta name="theme-color" content="#003d66">
+	<meta name="msapplication-navbutton-color" content="#003d66">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#003d66">
 	<link rel="shortcut icon" href="gC.webp">
 	<meta name="og:title" content="Blue Gmail Checker">
 	<meta name="title" content="Blue Gmail Checker">
@@ -76,7 +76,7 @@
 		</div>
 		<div class="m-left">
 			<div class="animation-list">
-            	<image class="animation-img" id="stby"src="img/stby-blue.gif"></image>
+            	<image class="animation-img" id="stby"src="img/stby-blue1.gif"></image>
                 <image class="animation-img" id="run"src="img/run4.gif"></image>
             </div>
 		</div>
@@ -377,3 +377,5 @@ document.addEventListener('DOMContentLoaded', function () {
 <script type="module" src="js/citapp.js"></script>
 <script src="js/origin.js"></script>
 </html>
+
+
