--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<meta name="description" content="Revolutionize Your Email Verification with Bulk Gmail Checker!Say goodbye to manual email verification and hello to efficiency with our cutting-edge Bulk Gmail Checker software! This powerful tool is designed to quickly and accurately verify the status of Gmail accounts, including whether they're active, require phone verification, or have been disabled.With Bulk Gmail Checker, you can:Verify Gmail accounts in bulk, saving you time and effort. Detect active, inactive, and disabled accounts with ease Identify accounts that require phone verification during login Effortlessly manage large email lists with our efficient verification process Streamline your email verification process and boost productivity with Bulk Gmail Checker. Try it today and experience the power of efficient email management!">
-	<meta name="og:description" content="Revolutionize Your Email Verification with Bulk Gmail Checker!Say goodbye to manual email verification and hello to efficiency with our cutting-edge Bulk Gmail Checker software! This powerful tool is designed to quickly and accurately verify the status of Gmail accounts, including whether they're active, require phone verification, or have been disabled.With Bulk Gmail Checker, you can:Verify Gmail accounts in bulk, saving you time and effort. Detect active, inactive, and disabled accounts with ease Identify accounts that require phone verification during login Effortlessly manage large email lists with our efficient verification process Streamline your email verification process and boost productivity with Bulk Gmail Checker. Try it today and experience the power of efficient email management!">
+	<meta name="description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously">
+	<meta name="og:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="expires" content="0">
 	<meta name="referrer" content="never">
-	<meta name="keywords" content="Gmail Checker, Bulk Gmail Checker, Email Verifier, Gmail Verifier, Mail Checker, Verify Gmail, Check Gmail, Gmail Validation, Email Validation">
+	<meta name="keywords" content="Blue Gmail Checker,Gmail Checker, Email marketing, List building, Lead generation, Email validation, Spam prevention, Gmail list verification, Verify Gmail addresses, Gmail account checker, Mass Gmail checker, Gmail validation, Email verification tool, Gmail verifier, Bulk Gmail verification, Bulk Gmail Checker, Email Verifier, Gmail Verifier, Mail Checker, Verify Gmail, Check Gmail, Gmail Validation, Email Validation">
 	<meta name="author" content="Gmooy">
 	<meta name="theme-color" content="#003d66">
 	<meta name="msapplication-navbutton-color" content="#003d66">
@@ -18,15 +18,14 @@
 	<meta name="title" content="Blue Gmail Checker">
 	<meta name="og:type" content="website">
 	<meta name="og:url" content="gC.webp">
-	<meta name="og:image" content="gmailchecker.webp"><title>Gmail Checker</title>
+	<meta name="og:image" content="gmailchecker.webp"><title>Blue Gmail Checker</title>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NZRG7FH5Z0"></script>
 	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-NZRG7FH5Z0');</script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<header>
@@ -50,14 +49,10 @@
 		<div id="loading-screen" class="loading-screen">
 			<div class="loader">
 				<div class="spinner"></div>
-				<p>Loading...</p>
+				<p>BLUE GMAIL CHECKER</p>
 			</div>
 		</div>
-		<div class="duplicate-user">
-			<div class="duplicate-user-content">
-				<span>⛔ User duplication detected!</span> 
-			</div>
-		</div>
+		<div id="duplicate-user"></div>
 		<div class="fxd-ls">
         	<div class="logo">
             	<image id="logo-img"src="gC.webp"></image>
@@ -296,6 +291,7 @@
 						</div>
 						<div id="pinned-message-container"></div>
 						<div class="chat-body" id="chat-body"></div>
+						<button id="scroll-to-bottom"><i class="fas fa-arrow-down"></i></button>
 						<div id="reply-preview">
 							<span id="reply-text"></span>
 							<button id="cancel-reply" class="chat-btn">Cancel</button>
@@ -304,7 +300,6 @@
 							<input type="text" class="message-input" placeholder="Send a message..." id="message-input">
 							<button class="chat-btn send-btn" type="submit">Send</button>
 						</form>
-						<button id="scroll-to-bottom"><i class="fas fa-arrow-down"></i></button>
 					</div>
 				</div>
 				<div class="m-r-btm-child" id="online-user">
@@ -365,17 +360,13 @@
 <script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
-
-</body>
+<script type="module" src="js/citapp.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
     document.body.classList.add('loaded');
 });
-
-
 </script>
-<script type="module" src="js/citapp.js"></script>
-<script src="js/origin.js"></script>
+</body>
 </html>
 
 
