--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<meta name="title" content="Blue Gmail Checker">
 	<meta name="og:type" content="website">
 	<meta name="og:url" content="gC.webp">
-	<meta name="og:image" content="gmailchecker.webp"><title>Blue Gmail Checker</title>
+	<meta name="og:image" content="gmailchecker.webp">
+	<title>Blue Gmail Checker</title>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NZRG7FH5Z0"></script>
 	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-NZRG7FH5Z0');</script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
@@ -29,8 +30,7 @@
 </head>
 <body>
 	<header>
-		<div class="head-c" id="page-indicator">
-		</div>
+		<div class="head-c" id="page-indicator"></div>
         <div class="head-c" id="page-title">
         	<h3>BLUE GMAIL CHECKER</h3>
 			<div class="logo-mob" style="display: none">
@@ -206,7 +206,7 @@
                     	<div class="monitor-c">
                         	<div class="monitor-msg" id="greeting-msg"></div>
                         	<div class="monitor-msg" id="system-msg"></div>
-                            <div class="monitor-msg" id="standby-msg">standby...</div>
+                            <div class="monitor-msg" id="standby-msg"></div>
                             <div class="res-counter">
                                 <div class="counter-type" id="live-counter" >
                                     <span class="title">LIVE</span>
@@ -309,10 +309,15 @@
 							<span id="reply-text"></span>
 							<button id="cancel-reply" class="chat-btn">Cancel</button>
 						</div>
-						<form class="chat-input" id="message-form">
-							<textarea class="message-input" id="message-input" placeholder="Send a message..." rows="1"></textarea>
-							<button class="chat-btn send-btn" type="submit">Send</button>
-						</form>
+						<div class="chat-input-c">
+							<form class="chat-input" id="message-form">
+								<textarea class="message-input" id="message-input" placeholder="Send a message..." rows="1"></textarea>
+								<div class="input-btn-c">
+									<button class="chat-btn cancel-send-btn" id="cancel-send-btn" type="button">cancel</button>
+									<button class="chat-btn send-btn" type="submit">Send</button>
+								</div>
+							</form>
+						</div>
 					</div>
 				</div>
 				<div class="m-r-btm-child" id="online-user">
