--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-	<script src="js/jquery-3.6.0.min.js"></script>
+	<script src="https://mbahbabat.github.io/js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<header>
@@ -378,7 +378,7 @@
 <script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
-<script type="module" src="js/citapp.js"></script>
+<script type="module" src="https://mbahbabat.github.io/js/citapp.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
     document.body.classList.add('loaded');
