--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-NZRG7FH5Z0');</script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<link rel="stylesheet" href="https://mbahbabat.github.io/css/style.css">
 	<script src="https://mbahbabat.github.io/js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -375,17 +375,17 @@
         </div>
 	</footer>
 </body>
-<script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
-<script type="module" src="https://mbahbabat.github.io/js/citapp.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    document.body.classList.add('loaded');
-});
-
-</script>
+	<script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
+	<script type="module" src="https://mbahbabat.github.io/js/citapp.js"></script>
 </body>
+	<script>
+	document.addEventListener('DOMContentLoaded', function () {
+		document.body.classList.add('loaded');
+	});
+
+	</script>
 </html>
 
 
