--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<meta name="description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously">
-	<meta name="og:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta http-equiv="expires" content="0">
-	<meta name="referrer" content="never">
-	<meta name="keywords" content="Blue Gmail Checker,Gmail Checker, Email marketing, List building, Lead generation, Email validation, Spam prevention, Gmail list verification, Verify Gmail addresses, Gmail account checker, Mass Gmail checker, Gmail validation, Email verification tool, Gmail verifier, Bulk Gmail verification, Bulk Gmail Checker, Email Verifier, Gmail Verifier, Mail Checker, Verify Gmail, Check Gmail, Gmail Validation, Email Validation">
-	<meta name="author" content="Gmooy">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+    <title>Gmail Checker - The Best Email Checker Tools 2025</title>
+    <meta name="description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously, Try it now!">
+    <meta name="keywords" content="Blue Gmail Checker,Gmail Checker, Email marketing, List building, Lead generation, Email validation, Spam prevention, Gmail list verification, Verify Gmail addresses, Gmail account checker, Mass Gmail checker, Gmail validation, Email verification tool, Gmail verifier, Bulk Gmail verification, Bulk Gmail Checker, Email Verifier, Gmail Verifier, Mail Checker, Verify Gmail, Check Gmail, Gmail Validation, Email Validation">
+    <meta name="author" content="Gmooy">
 	<meta name="theme-color" content="#003d66">
 	<meta name="msapplication-navbutton-color" content="#003d66">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#003d66">
-	<link rel="shortcut icon" href="gC.webp">
-	<meta name="og:title" content="Blue Gmail Checker">
-	<meta name="title" content="Blue Gmail Checker">
-	<meta name="og:type" content="website">
-	<meta name="og:url" content="gC.webp">
-	<meta name="og:image" content="gmailchecker.webp">
-	<title>Blue Gmail Checker</title>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NZRG7FH5Z0"></script>
-	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-NZRG7FH5Z0');</script>
+    <meta property="og:title" content="Gmail Checker - The Best Email Checker Tools 2025">
+    <meta property="og:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously, Try it now!">
+    <meta property="og:image" content="https://gmailchecker.github.io.com/gC.webp">
+    <meta property="og:url" content="https://gmailchecker.github.io.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Gmail Checker - The Best Email Checker Tools 2025">
+    <meta name="twitter:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneousl, Try it now!">
+    <meta name="twitter:image" content="https://gmailchecker.github.io.com/gC.webp">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="expires" content="0">
+	<meta name="referrer" content="never">
+    <link rel="canonical" href="https://gmailchecker.github.io.com">
+    <link rel="shortcut icon" href="gC.webp" type="image/webp">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NZRG7FH5Z0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-NZRG7FH5Z0');
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Gmail Checker",
+      "url": "https://gmailchecker.github.io.com",
+      "logo": "https://gmailchecker.github.io.com/gC.webp",
+      "description": "Online tool to verify bulk emails quickly, accurately and securely without logging in.",
+      "sameAs": [
+        "https://t.me/GMAIL_GLOBAL_CHAT"
+      ]
+    }
+    </script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" href="https://mbahbabat.github.io/css/style.css">
-	<script src="https://mbahbabat.github.io/js/jquery-3.6.0.min.js"></script>
+	<script src="https://mbahbabat.github.io/js/jquery-3.6.0.min.js"></script>	
 </head>
 <body>
 	<header>
