--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#003d66">
     <meta property="og:title" content="Gmail Checker - The Best Email Checker Tools 2025">
     <meta property="og:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously, Try it now!">
-    <meta property="og:image" content="https://gmailchecker.github.io.com/gC.webp">
-    <meta property="og:url" content="https://gmailchecker.github.io.com">
+    <meta property="og:image" content="https://gmailchecker.github.io/gC.webp">
+    <meta property="og:url" content="https://gmailchecker.github.io">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gmail Checker - The Best Email Checker Tools 2025">
     <meta name="twitter:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneousl, Try it now!">
-    <meta name="twitter:image" content="https://gmailchecker.github.io.com/gC.webp">
+    <meta name="twitter:image" content="https://gmailchecker.github.io/gC.webp">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="expires" content="0">
 	<meta name="referrer" content="never">
-    <link rel="canonical" href="https://gmailchecker.github.io.com">
+    <link rel="canonical" href="https://gmailchecker.github.io">
     <link rel="shortcut icon" href="gC.webp" type="image/webp">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NZRG7FH5Z0"></script>
     <script>
@@ -36,8 +36,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Gmail Checker",
-      "url": "https://gmailchecker.github.io.com",
-      "logo": "https://gmailchecker.github.io.com/gC.webp",
+      "url": "https://gmailchecker.github.io",
+      "logo": "https://gmailchecker.github.io/gC.webp",
       "description": "Online tool to verify bulk emails quickly, accurately and securely without logging in.",
       "sameAs": [
         "https://t.me/GMAIL_GLOBAL_CHAT"
