--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-    <title>Gmail Checker - The Best Email Checker Tools 2025</title>
+    <title>Blue Gmail Checker - The Best Email Checker Tools 2025</title>
     <meta name="description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously, Try it now!">
     <meta name="keywords" content="Blue Gmail Checker,Gmail Checker, Email marketing, List building, Lead generation, Email validation, Spam prevention, Gmail list verification, Verify Gmail addresses, Gmail account checker, Mass Gmail checker, Gmail validation, Email verification tool, Gmail verifier, Bulk Gmail verification, Bulk Gmail Checker, Email Verifier, Gmail Verifier, Mail Checker, Verify Gmail, Check Gmail, Gmail Validation, Email Validation">
     <meta name="author" content="Gmooy">
 	<meta name="theme-color" content="#003d66">
 	<meta name="msapplication-navbutton-color" content="#003d66">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#003d66">
-    <meta property="og:title" content="Gmail Checker - The Best Email Checker Tools 2025">
+	<meta name="og:title" content="Blue Gmail checker">
+	<meta name="title" content="Blue Gmail checker">
+	<meta name="apple-mobile-web-app-title" content="Blue Gmail checker">
+	<meta name="application-name" content="Blue Gmail checker">
+    <meta property="og:title" content="Blue Gmail Checker - The Best Email Checker Tools 2025">
     <meta property="og:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneously, Try it now!">
     <meta property="og:image" content="https://gmailchecker.github.io/gC.webp">
     <meta property="og:url" content="https://gmailchecker.github.io">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Gmail Checker - The Best Email Checker Tools 2025">
+    <meta name="twitter:title" content="Blue Gmail Checker - The Best Email Checker Tools 2025">
     <meta name="twitter:description" content="Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials. Our platform ensures a safe and efficient way to check the validity of multiple Gmail accounts simultaneousl, Try it now!">
     <meta name="twitter:image" content="https://gmailchecker.github.io/gC.webp">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,17 +36,21 @@
       gtag('config', 'G-NZRG7FH5Z0');
     </script>
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Gmail Checker",
-      "url": "https://gmailchecker.github.io",
-      "logo": "https://gmailchecker.github.io/gC.webp",
-      "description": "Online tool to verify bulk emails quickly, accurately and securely without logging in.",
-      "sameAs": [
-        "https://t.me/GMAIL_GLOBAL_CHAT"
-      ]
-    }
+	{
+	  "@context": "https://schema.org",
+	  "@type": "WebSite",
+	  "name": "Blue Gmail Checker",
+	  "url": "https://gmailchecker.github.io",
+	  "description": "Blue Gmail Checker is a powerful tool designed to verify Gmail addresses in bulk, without requiring login credentials.",
+	  "publisher": {
+		"@type": "Organization",
+		"name": "Blue Gmail Checker",
+		"logo": {
+		  "@type": "ImageObject",
+		  "url": "https://gmailchecker.github.io/gC.webp"
+		}
+	  }
+	}
     </script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
