--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						  <div class="lamp" id="lamp6"></div>
 						</div>
                         <div class="progress progress-lg">
-                            <div id="mail-progress-bar" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Progress:</div>
+                            <div id="mail-progress-bar" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 					</div>
 				</div>
