--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<div class="radio-server-c">
 							<div class="radio-server">
 								<input type="radio" id="server1" name="server" value="server1">
-								<label for="server1">Server 1</label>
+								<label id="label-server1" for="server1">Server 1</label>
 							</div>
 							<div class="radio-server">
 								<input type="radio" id="server2" name="server" value="server2" checked>
@@ -416,5 +416,6 @@
 
 	</script>
 </html>
+
 
 
