--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 							</div> 
 						</div>
 					</div> 
-					<div class="server-selection">
+					<div class="server-selection" title="not available">
 						<span class="title">Select server:</span>
 						<div class="radio-server-c">
 							<div class="radio-server">
@@ -416,6 +416,7 @@
 
 	</script>
 </html>
+
 
 
 
