--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
 								<input type="radio" id="server2" name="server" value="server2" checked>
 								<label for="server2">Server 2</label>
 							</div>
+							<div class="radio-server">
+								<input type="radio" id="quickmode" name="server" value="quickmode">
+								<label for="quickmode">Quick Mode</label>
+							</div>
 						</div>
 					</div>	
 					<div class="executor">
@@ -416,6 +420,7 @@
 
 	</script>
 </html>
+
 
 
 
