--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" href="https://mbahbabat.github.io/css/style.css">
 	<script src="https://mbahbabat.github.io/js/jquery-3.6.0.min.js"></script>	
+	<script src="./js/analytics.js"></script>	
 </head>
 <body>
 	<header>
@@ -420,6 +421,7 @@
 
 	</script>
 </html>
+
 
 
 
